--- a/src/Components/Nav/Left/LeftPart.css
+++ b/src/Components/Nav/Left/LeftPart.css
@@ -1,14 +1,13 @@
-/* .button{
+/* button{
+    cursor: pointer;
+    outline: none;
+}
+#buttonList > button{
 margin-left: 3px;
 text-transform: uppercase;
 background-color: #f4f4f4;
-border: 1px solid #c5c5c5;
-outline: none;
-padding: 10px;
-cursor: pointer;
-}
-
-.button:hover{
-color: white;
-background-color: rgb(2, 124, 2);
-}  */
+border: 1px solid #dbdbdb;
+color: rgb(83, 83, 83);
+padding: 5px 10px;
+font-size: small;
+} */
