--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,12 +1,55 @@
+button{
+    cursor: pointer;
+    outline: none;
+}
+
+/* Leftside Nav */
 .flex-row{
     display: flex;
     flex-direction: row;
-    /* justify-content: center; */
     align-items: center;
 }
 
-input{
-    padding: 8px;
+#buttonList > button{
+    margin-left: 3px;
+    text-transform: uppercase;
+    background-color: #f4f4f4;
+    border: 1px solid #dbdbdb;
+    color: rgb(83, 83, 83);
+    padding: 5px 10px;
+    font-size: small;
+}
+
+/* Rightside Nav */
+.input-icons {
+    position: relative;
+}
+.input-icons > input{
     outline: none;
     border: none;
+    border-bottom: 1px solid #dbdbdb;
+    padding: 5px 10px;
+}
+
+.input-icons > .icon{
+    padding: 5px 10px;
+    text-align: center;
+    position: absolute;
+    right: 5px;
+}
+.right-nav > button{
+margin-right: 5px;
+background-color: #f4f4f4;
+border: 1px solid #dbdbdb;
+color: rgb(83, 83, 83);
+padding: 5px 10px;
+}
+.right-nav > button > .settings{
+    position: relative;
+    top: 4px;
+}
+.right-nav > span{
+    color: rgb(83, 83, 83);
+    margin-right: 5px;
+    font-size: small;
 }
