--- a/src/Components/Tickets/Tickets.css
+++ b/src/Components/Tickets/Tickets.css
@@ -1,7 +1,7 @@
 .grid{
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    grid-gap: 10px;
+    grid-gap: 8px;
 }
 .tickets{
     padding: 0 6em 0 2em ;
@@ -9,13 +9,17 @@
 .grid > div{
     background-color: #f4f4f4;
     border-radius: 5px;
+    height: 100vh;
+}
+.grid > div:first-child{
+    width: 310px;
+    overflow-y: scroll;
 }
 .grid > div h3{
     text-transform: uppercase;
     font-size: small;
     margin-left: 1rem;
 }
-
 .grid-column{
     display: grid;
     grid-template-rows: repeat(4,1fr);
@@ -26,12 +30,51 @@
     margin:0 0.3em ;
      padding: 1em;
      font-size: small;
+     color:grey;
      border-left:3px solid green ;
      border-radius: 5px;
 }
 .grid-column > div:nth-child(2){
     border-left:3px solid red;
 }
-/* .each-grid{ */
+.grid-column > div > span{
+    font-weight: 500;
+}
+.grid-column > div > span> button{
+color: rgb(83, 123, 255);
+border: 1px solid rgb(83, 123, 255);
+border-radius: 3px;
+}
+.order{
+    color: grey;
+}
 
-/* } */
+.order-no{
+    color: black;
+    font-weight: 600;
+}
+.last-div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.time{
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: x-small;
+    width: 60%;
+}
+.last-div > p{
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
+    align-items: center;
+}
+.last-div > p > span{
+    border: 1px solid rgb(247, 139, 157);
+    width: 25px;
+    height: 25px;
+    display: inline-block;
+    border-radius: 50%;
+}
