--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -15,10 +15,11 @@ button{
     text-transform: uppercase;
     background-color: #f4f4f4;
     border: 1px solid #dbdbdb;
+    border-radius: 3px;
     color: rgb(83, 83, 83);
     padding: 5px 10px;
     font-size: small;
-    letter-spacing: 0.4px;
+    letter-spacing: 0.3px;
 }
 
 /* Rightside Nav */
