--- a/src/Components/Tickets/Tickets.css
+++ b/src/Components/Tickets/Tickets.css
@@ -22,11 +22,12 @@
     text-transform: uppercase;
     font-size: small;
     margin-left: 1rem;
+    letter-spacing: 0.5px;
 }
 .grid-column{
     display: grid;
     grid-template-rows: repeat(4,1fr);
-    grid-gap: 10px;
+    grid-gap: 7px;
 }
 .grid-column > div{
     background-color: white;
@@ -47,32 +48,37 @@
 color: rgb(83, 123, 255);
 border: 1px solid rgb(83, 123, 255);
 border-radius: 3px;
+margin-left: 5px;
 }
-.order{
-    color: grey;
-}
-
 .order-no{
     color: black;
     font-weight: 600;
+    margin-bottom: -5px;
+}
+.order{
+    font-size:smaller;
+    color: grey;
+    margin-bottom: -5px;
 }
 .last-div{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: -10px;
 }
 .time{
     text-transform: uppercase;
     font-weight: 700;
     font-size: x-small;
-    width: 60%;
 }
 .last-div > p{
     display: flex;
-    width: 40%;
+    width: 36%;
     justify-content: space-between;
     align-items: center;
+    text-transform: uppercase;
+    font-size: x-small;
 }
 .last-div > p > span{
     border: 1px solid rgb(172, 238, 172);
