--- a/src/Components/Tickets/Tickets.css
+++ b/src/Components/Tickets/Tickets.css
@@ -15,6 +15,19 @@
     width: 310px;
     overflow-y: scroll;
 }
+::-webkit-scrollbar-track{
+    /* box-shadow: inset 0 0 6px rgba(0,0,0,0.3);  */
+    border-radius: 10px;
+  
+}
+::-webkit-scrollbar{
+    width: 12px;
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-color: #cacaca;
+    /* box-shadow: inset 0 0 6px rgba(0,0,0,0.5);  */
+}
 .grid > div:nth-child(2){
     width: 310px;
 }
