--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,3 +1,4 @@
+/* common css for button */
 button{
     cursor: pointer;
     outline: none;
@@ -40,11 +41,11 @@ button{
     right: 5px;
 }
 .right-nav > button{
-margin-right: 5px;
-background-color: #f4f4f4;
-border: 1px solid #dbdbdb;
-color: rgb(83, 83, 83);
-padding: 5px 10px;
+    margin-right: 5px;
+    background-color: #f4f4f4;
+    border: 1px solid #dbdbdb;
+    color: rgb(83, 83, 83);
+    padding: 5px 10px;
 }
 .right-nav > button > .settings{
     position: relative;
