--- a/src/Components/Tickets/Tickets.css
+++ b/src/Components/Tickets/Tickets.css
@@ -1,3 +1,4 @@
+/* the whole order table */
 .grid{
     display: grid;
     grid-template-columns: repeat(4,1fr);
@@ -6,19 +7,31 @@
 .tickets{
     padding: 0 3em 0 2em ;
 }
+
+/* each order box */
 .grid > div{
     background-color: #f4f4f4;
     border-radius: 5px;
     height: 100vh;
 }
+
+/* title of each order box */
+.grid > div h3{
+    text-transform: uppercase;
+    font-size: small;
+    margin-left: 1rem;
+    letter-spacing: 0.5px;
+}
+
+/* received order box */
 .grid > div:first-child{
     width: 310px;
     overflow-y: scroll;
 }
+
+/* styling the scrollbar */
 ::-webkit-scrollbar-track{
-    /* box-shadow: inset 0 0 6px rgba(0,0,0,0.3);  */
     border-radius: 10px;
-  
 }
 ::-webkit-scrollbar{
     width: 12px;
@@ -26,22 +39,20 @@
 ::-webkit-scrollbar-thumb {
     border-radius: 10px;
     background-color: #cacaca;
-    /* box-shadow: inset 0 0 6px rgba(0,0,0,0.5);  */
 }
+
+/* inside received order box */
 .grid > div:nth-child(2){
     width: 310px;
 }
-.grid > div h3{
-    text-transform: uppercase;
-    font-size: small;
-    margin-left: 1rem;
-    letter-spacing: 0.5px;
-}
+
 .grid-column{
     display: grid;
-    grid-template-rows: repeat(4,1fr);
     grid-gap: 7px;
+    padding-bottom: 7px;
 }
+
+/* each orders in received orders box */
 .grid-column > div{
     background-color: white;
     margin:0 0.3em ;
@@ -54,25 +65,34 @@
 .grid-column > div:nth-child(2){
     border-left:3px solid red;
 }
+
+/* serial no */
 .grid-column > div > span{
     font-weight: 500;
 }
+
+/* response due button */
 .grid-column > div > span> button{
-color: rgb(83, 123, 255);
-border: 1px solid rgb(83, 123, 255);
-border-radius: 3px;
-margin-left: 5px;
+    color: rgb(83, 123, 255);
+    border: 1px solid rgb(83, 123, 255);
+    border-radius: 3px;
+    margin-left: 5px;
 }
+/* order number */
 .order-no{
     color: black;
     font-weight: 600;
     margin-bottom: -5px;
 }
+
+/* order items */
 .order{
     font-size:smaller;
     color: grey;
     margin-bottom: -5px;
 }
+
+/* time and assigned to */
 .last-div{
     display: flex;
     flex-direction: row;
@@ -80,11 +100,15 @@ margin-left: 5px;
     align-items: center;
     margin-bottom: -10px;
 }
+
+/* due date and time */
 .time{
     text-transform: uppercase;
     font-weight: 700;
     font-size: x-small;
 }
+
+/* assigned to */
 .last-div > p{
     display: flex;
     width: 36%;
@@ -93,6 +117,8 @@ margin-left: 5px;
     text-transform: uppercase;
     font-size: x-small;
 }
+
+/* the person icon */
 .last-div > p > span{
     border: 1px solid rgb(172, 238, 172);
     background-color: rgb(231, 255, 231);
