--- a/src/Components/Tickets/Tickets.css
+++ b/src/Components/Tickets/Tickets.css
@@ -61,6 +61,7 @@
      color:grey;
      border-left:3px solid rgb(115, 177, 115) ;
      border-radius: 5px;
+     cursor: move;
 }
 .grid-column > div:nth-child(2){
     border-left:3px solid red;
